--- a/config.ini
+++ b/config.ini
@@ -17,7 +17,8 @@
 ;==========================================================
 
 [colors]
-background = #282828
+# background = #282828
+background = #121212
 background-alt = #4D4846
 foreground = #C5C8C6
 primary = #d79921
@@ -39,10 +40,10 @@ label = %output%
 
 [module/powerprofile]
 type=custom/script
-exec="~/Scripts/powermode.sh" 
-click-left="~/Scripts/powermode.sh 0"   
-click-middle="~/Scripts/powermode.sh 1"
-click-right="~/Scripts/powermode.sh 2"
+exec="~/Scripts/powermode.sh 0" 
+click-left="~/Scripts/powermode.sh 1"   
+click-middle="~/Scripts/powermode.sh 2"
+click-right="~/Scripts/powermode.sh 3"
 tail=true
 format=<label>
 label = %output%
