--- a/main_bar.ini
+++ b/main_bar.ini
@@ -3,8 +3,7 @@ monitor = DP-2
 height = 18pt
 dpi = 96
 
-background = ${colors.background}80
-# background = #28282880
+background = ${colors.background}
 foreground = ${colors.foreground}
 
 padding-left = 10pt
