--- a/sub_bar.ini
+++ b/sub_bar.ini
@@ -3,7 +3,7 @@ monitor = DP-0
 height = 18pt
 dpi = 96
 
-background = ${colors.background}AA
+background = ${colors.background}
 foreground = ${colors.foreground}
 
 padding-left = 10pt
